tests/query_test/test_hdfs_file_mods.py
@@ -18,22 +18,23 @@
 
 import pytest
 
+from tests.beeswax.impala_beeswax import ImpalaBeeswaxException
 from tests.common.impala_cluster import ImpalaCluster
 from tests.common.impala_test_suite import ImpalaTestSuite
-from tests.common.skip import SkipIfS3, SkipIfADLS
+from tests.common.skip import SkipIfLocal
 from tests.common.test_vector import ImpalaTestDimension
 from subprocess import call
 from tests.util.filesystem_utils import FILESYSTEM_PREFIX
 
-# Modifications to test with the file handle cache
+# Modifications to test
 MODIFICATION_TYPES=["delete_files", "delete_directory", "move_file", "append"]
 
-@SkipIfS3.caching
-@SkipIfADLS.caching
-class TestHdfsFdCaching(ImpalaTestSuite):
+@SkipIfLocal.hdfs_client
+class TestHdfsFileMods(ImpalaTestSuite):
   """
-  This test suite tests the behavior of HDFS file descriptor caching, including
-  potential error cases such as file deletes.
+  This test suite tests that modifications to HDFS files don't crash Impala.
+  In particular, this interacts with existing functionality such as the
+  file handle cache and IO retries.
   """
 
   @classmethod
@@ -42,7 +43,7 @@ class TestHdfsFdCaching(ImpalaTestSuite):
 
   @classmethod
   def add_test_dimensions(cls):
-    super(TestHdfsFdCaching, cls).add_test_dimensions()
+    super(TestHdfsFileMods, cls).add_test_dimensions()
     cls.ImpalaTestMatrix.add_dimension(ImpalaTestDimension('modification_type',\
         *MODIFICATION_TYPES))
     cls.ImpalaTestMatrix.add_constraint(cls.file_format_constraint)
@@ -64,13 +65,13 @@ class TestHdfsFdCaching(ImpalaTestSuite):
 
   @pytest.mark.execute_serially
   def test_file_modifications(self, vector, unique_database):
-    """Tests file modifications on a file that is cached in the file handle cache."""
+    """Tests file modifications on an external table."""
 
     new_table_location = "{0}/test-warehouse/{1}".format(FILESYSTEM_PREFIX,\
         unique_database)
     self.setup_ext_table(vector, unique_database, new_table_location)
 
-    # Query the table (puts file handle in the cache)
+    # Query the table. If file handle caching is enabled, this will fill the cache.
     count_query = "select count(*) from {0}.t1".format(unique_database)
     original_result = self.execute_query_expect_success(self.client, count_query)
     assert(original_result.data[0] == '3')
@@ -99,7 +100,10 @@ class TestHdfsFdCaching(ImpalaTestSuite):
       assert(false)
 
     # The query might fail, but nothing should crash.
-    self.execute_query(count_query)
+    try:
+      self.execute_query(count_query)
+    except ImpalaBeeswaxException as e:
+      pass
 
     # Invalidate metadata
     invalidate_metadata_sql = "invalidate metadata {0}.t1".format(unique_database)
@@ -113,7 +117,8 @@ class TestHdfsFdCaching(ImpalaTestSuite):
           modification_type == 'delete_directory'):
       assert(new_result.data[0] == '0')
     elif (modification_type == 'append'):
-      assert(new_result.data[0] == '6')
+      # Allow either the old count or the new count to tolerate delayed consistency.
+      assert(new_result.data[0] == '6' or new_result.data[0] == '3')
 
     # Drop table
     drop_table_sql = "drop table {0}.t1".format(unique_database)
